@@ -8,6 +8,7 @@ v1.5 - Pending
 	+ Allow DND of cover art from a web browser (Артем)
 	+ Allow DND of music from a file manager into playlist (requires mpd 0.14)
 	+ Preserve column percentages for current tab across window resizing
+	+ Speed up mpd-related commandline arguments
 	+ Switch back to last tab on second cover art click
 	+ Retain selection in lists after removing items
 	+ Hidden config option to expand notebook tabs (tabs_expanded)
